# quiz-builder-app

./: .gitignore  README.md  config.json
.github/workflows/: ci.yml
parser/: DESIGN.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
parser/.github/workflows/: ci.yml
parser/src/question_parser/: cli.py  defaults.py  errors.py  extractor.py  models.py  parser.py
parser/tests/: conftest.py  create_fixtures.py  test_choice.py  test_cli.py  test_errors.py  test_extractor.py  test_parser.py  test_question.py  test_quiz.py  test_setup.py
parser/tests/fixtures/: unlabeled_quiz.docx  valid_quiz.docx  with_empty_paragraphs.docx
sample-data/: SAMPLE-DOCUMENT.docx  quiz-output.json
web/: .gitignore  README.md  package-lock.json  package.json
web/src/: App.vue
web/src/assets/: app.css
web/src/components/: AnswerChoice.vue  QuestionCard.vue  QuizProgress.vue  QuizView.vue  ResultsView.vue
web/src/components/__tests__/: AnswerChoice.spec.ts  QuestionCard.spec.ts  QuizProgress.spec.ts  QuizView.spec.ts  ResultsView.spec.ts
web/src/composables/: useLocalStorage.ts  useQuiz.ts
web/src/composables/__tests__/: useLocalStorage.spec.ts  useQuiz.spec.ts
web/src/constants/: index.ts  quiz.ts
web/src/types/: index.ts  quiz.ts
web/src/types/__tests__/: quiz.spec.ts
